feat.0064: fixed PaymentDomainService log text errors